--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,10 @@
-AUTHORIZED_USER_ID=your-unique-user-id-here
+API_KEY=your-unique-user-id-here
 LOG_FILE_PATH=
 SERVER_HEADER=
 MAX_CONCURRENCY=
 CORS_ALLOWED_ORIGINS=
 SERVER_PORT=
+RATE_LIMIT_MAX=100
+RATE_LIMIT_EXPIRATION=1m
+RATE_LIMIT_MAX=100
+RATE_LIMIT_EXPIRATION=1m
