--- a/.env.template
+++ b/.env.template
@@ -3,8 +3,8 @@ LOG_FILE_PATH=
 SERVER_HEADER=
 MAX_CONCURRENCY=
 CORS_ALLOWED_ORIGINS=
+CORS_ALLOW_CREDENTIALS=
 SERVER_PORT=
 RATE_LIMIT_MAX=100
 RATE_LIMIT_EXPIRATION=1m
-RATE_LIMIT_MAX=100
-RATE_LIMIT_EXPIRATION=1m
+VERBOSE=false
