--- a/.env.template
+++ b/.env.template
@@ -5,6 +5,8 @@ MAX_CONCURRENCY=
 CORS_ALLOWED_ORIGINS=
 CORS_ALLOW_CREDENTIALS=
 SERVER_PORT=
-RATE_LIMIT_MAX=100
-RATE_LIMIT_EXPIRATION=1m
-VERBOSE=false
+BUFFER_SIZE=1048576
+FLUSH_INTERVAL=1s
+RATE_LIMIT_MAX=10000
+RATE_LIMIT_BURST=20000
+VERBOSE=true
